# research-org

./: .gitignore  README.md  main.py  pyproject.toml  test_ingestion.py
agents/: base.py
agents/audit/: benchmark.py  consistency.py  fact_check.py
agents/director/: director.py
agents/ingestion/: file_parser.py  input_receiver.py  preliminary_outline.py
agents/production/: appendix_assembler.py  graph_generation.py  latex_formatter.py  layout_review.py  writing_review.py
agents/proposal/: alignment.py  proposal_reviewer.py  scout.py
agents/qa/: citation_auditor.py  coherence_checker.py  fact_check_qa.py
agents/research/: domain_expert.py  topic_researcher.py  topic_reviewer.py
agents/structure/: structure_editorial.py
agents/writing/: section_writer.py  synthesis.py
gates/: gate_evaluator.py
state/: __init__.py  research_state.py
